[gd_scene load_steps=13 format=3 uid="uid://bck6nlp58orge"]

[ext_resource type="Script" path="res://menu/main/main_menu.gd" id="1_r1bop"]
[ext_resource type="Texture2D" uid="uid://pi10u6s6ncyk" path="res://menu/main/fadeBlack.png" id="2_1said"]
[ext_resource type="Texture2D" uid="uid://dyfcffuwypdir" path="res://menu/main/Menu_BG.png" id="2_2wawy"]
[ext_resource type="Texture2D" uid="uid://c3rlk6ikjuc3k" path="res://menu/main/Menu_BG_noui.png" id="2_fkjsd"]
[ext_resource type="Shader" path="res://menu/main/titleBG.gdshader" id="2_jwyge"]
[ext_resource type="Texture2D" uid="uid://dhsrwv64xjsch" path="res://menu/main/normal.png" id="6_1a6n0"]
[ext_resource type="PackedScene" uid="uid://c4wg4tchcoimf" path="res://textboxbig/textboxbig.tscn" id="6_62jr1"]
[ext_resource type="Texture2D" uid="uid://c3wytwyft83lk" path="res://menu/main/down.png" id="7_c6vqb"]
[ext_resource type="Texture2D" uid="uid://d0imh6e5x3kww" path="res://menu/main/hover.png" id="8_7gkft"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pvu5k"]
shader = ExtResource("2_jwyge")
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a1daf"]
shader = ExtResource("2_jwyge")
shader_parameter/alpha = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_xx6b5"]
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1bop")

[node name="Black" type="TextureRect" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1said")

[node name="BgNoTitle" type="TextureRect" parent="."]
z_index = -5
material = SubResource("ShaderMaterial_pvu5k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fkjsd")

[node name="BG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_a1daf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2wawy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -50.0
offset_right = 64.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="playButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_1a6n0")
texture_pressed = ExtResource("7_c6vqb")
texture_hover = ExtResource("8_7gkft")

[node name="playLabel" type="Label" parent="VBoxContainer/playButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 12.0
offset_right = 57.0
offset_bottom = 35.0
grow_horizontal = 2
text = "Play Game"
label_settings = SubResource("LabelSettings_xx6b5")

[node name="quitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_1a6n0")
texture_pressed = ExtResource("7_c6vqb")
texture_hover = ExtResource("8_7gkft")

[node name="quitLabel" type="Label" parent="VBoxContainer/quitButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 11.0
offset_right = 46.0
offset_bottom = 34.0
grow_horizontal = 2
text = "Close Game"
label_settings = SubResource("LabelSettings_xx6b5")

[node name="TextBox" parent="." instance=ExtResource("6_62jr1")]
visible = false
layout_mode = 1
offset_left = 112.0
offset_top = 200.0
offset_right = 112.0
offset_bottom = 200.0

[connection signal="pressed" from="VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="done" from="TextBox" to="." method="_on_text_box_done"]
